syntax = "proto3";

package sandbox;

message CompareMessage {
  int32 old_field = 1;
  int32 survived_field = 2;
}
